--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="segundo-container">
                     <div class="menu-top">
-                        <a href="pagina-padrao.html">
+                        <a href="sobre.html">
                             SOBRE
                         </a>
                         <a href="produtos.html">
@@ -48,9 +48,27 @@
     </header>
     <!-- menu - logo - barra de navegação -->
 
-    <!-- section introdução -->
+
     <main>
+
+        <!-- section introdução -->
+
+        <section class="section-introducao">
+            <div class="container">
+                <h1>
+                    Contato
+                </h1>
+                <p class="p-citacao-introducao">
+                    "Não tenha nada em sua casa que você não
+                    considere útil ou acredite ser bonito."
+                </p>
+            </div>
+        </section>
+
+        <!-- section introdução -->
+
         <!-- section formulário -->
+
         <section class="section-formulario">
             <div class="container">
                 <h2>ORÇAMENTO</h2>
@@ -91,21 +109,11 @@
                 </div>
             </div>
         </section>
+
         <!-- section formulário -->
 
-        <!-- section citacao carrossel -->
-
-        <section class="section-citacao-carrossel">
-            <div class="container">
-                <div class="div-background">
-
-                </div>
-            </div>
-        </section>
-
-        <!-- section citacao carrossel -->
-
         <!-- section map -->
+
         <section class="section-map">
             <div class="container">
                 <div class="map-container">
@@ -117,6 +125,7 @@
         <!-- section map -->
 
         <!-- section citação -->
+
         <section class="section-citacao">
             <div class="container">
                 <blockquote>
@@ -131,6 +140,7 @@
                 </blockquote>
             </div>
         </section>
+
         <!-- section citação -->
     </main>
 
