--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="segundo-container">
                     <div class="menu-top">
-                        <a href="pagina-padrao.html">
+                        <a href="sobre.html">
                             SOBRE
                         </a>
                         <a href="produtos.html">
@@ -51,6 +51,7 @@
 
     <main>
         <!-- section introdução -->
+
         <section class="section-introducao">
             <div class="container">
                 <h1>
@@ -72,6 +73,7 @@
                 </a>
             </div>
         </section>
+
         <!-- section introdução -->
 
         <!-- section produtos por categoria -->
