--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="segundo-container">
                     <div class="menu-top">
-                        <a href="pagina-padrao.html">
+                        <a href="sobre.html">
                             SOBRE
                         </a>
                         <a href="produtos.html">
@@ -48,12 +48,15 @@
     </header>
     <!-- menu - logo - barra de navegação -->
 
-    <!-- section introdução -->
+
     <main>
+
+        <!-- section introdução -->
+
         <section class="section-introducao">
             <div class="container">
                 <h1>
-                    PORTFOLIO
+                    Portfólio
                 </h1>
                 <p class="p-citacao-introducao">
                     "Não tenha nada em sua casa que você não
@@ -61,6 +64,7 @@
                 </p>
             </div>
         </section>
+
         <!-- section introdução -->
 
         <!-- section citacao carrossel -->
@@ -68,10 +72,10 @@
         <section class="section-citacao-carrossel">
             <div class="container">
                 <div class="div-textos">
-                    <h1>On</h1>
                     <blockquote>
-                        <p>"On Some shit lorem ipsum"</p>
-                        <cite>real nigga</cite>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem
+                            ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
+                        <cite>- Escritor</cite>
                     </blockquote>
                 </div>
             </div>
