--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css-padrao-normalize-reset-grid/normalize.css">
     <link rel="stylesheet" href="css-padrao-normalize-reset-grid/reset.css">
     <link rel="stylesheet" href="css-padrao-normalize-reset-grid/grid-layout.css">
-    <link rel="stylesheet" href="pagina-padrao/estilos-pagina-padrao.css">
+    <link rel="stylesheet" href="sobre/estilos-sobre.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Sobre</title>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="segundo-container">
                     <div class="menu-top">
-                        <a href="pagina-padrao.html" class="ativo">
+                        <a href="sobre.html" class="ativo">
                             SOBRE
                         </a>
                         <a href="produtos.html">
@@ -48,12 +48,14 @@
     </header>
     <!-- menu - logo - barra de navegação -->
 
-    <!-- section introdução -->
+
     <main>
+        <!-- section introdução -->
+
         <section class="section-introducao">
             <div class="container">
                 <h1>
-                    SOBRE
+                    Sobre
                 </h1>
                 <p class="p-citacao-introducao">
                     "Não tenha nada em sua casa que você não
@@ -61,6 +63,7 @@
                 </p>
             </div>
         </section>
+
         <!-- section introdução -->
 
         <!-- section 1 -->
@@ -128,65 +131,6 @@
         </section>
         <!-- section qualidade -->
 
-        <!-- section formulário -->
-        <section class="section-formulario">
-            <div class="container">
-                <h2>ORÇAMENTO</h2>
-                <div class="container-formulario-dados box-5">
-                    <div class="container-formulario">
-                        <form action="#" method="#">
-                            <div>
-                                <label for="nome">Nome:</label>
-                                <input type="text" id="nome" />
-                            </div>
-                            <div>
-                                <label for="email">E-mail:</label>
-                                <input type="email" id="email" />
-                            </div>
-                            <div>
-                                <label for="msg">Mensagem:</label>
-                                <textarea id="msg"></textarea>
-                            </div>
-                            <div class="div-button">
-                                <button type="submit">ENVIAR</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="container-dados">
-                        <h3>Dados</h3>
-                        <p>- +55 21 9 9999-9999</p>
-                        <p>- contato@bikcraft.com.br</p>
-                        <h3>Monte sua bikcraft</h3>
-                        <p>Escolha as especificações:</p>
-                        <ul>
-                            <li>- Cores</li>
-                            <li>- Estilos</li>
-                            <li>- Medidas</li>
-                            <li>- Acessórios</li>
-                            <li>- E outros</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- section formulário -->
-
-        <!-- section citação -->
-        <section class="section-citacao">
-            <div class="container">
-                <blockquote>
-                    <p>
-                        “O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da
-                        vida
-                        cotidiana.”
-                    </p>
-                    <cite>
-                        WILLIAM MORRIS
-                    </cite>
-                </blockquote>
-            </div>
-        </section>
-        <!-- section citação -->
     </main>
 
     <!-- footer -->
