--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="segundo-container">
                     <div class="menu-top">
-                        <a href="pagina-padrao.html">
+                        <a href="sobre.html">
                             SOBRE
                         </a>
                         <a href="produtos.html" class="ativo">
@@ -48,12 +48,14 @@
     </header>
     <!-- menu - logo - barra de navegação -->
 
-    <!-- section introdução -->
+
     <main>
+        <!-- section introdução -->
+
         <section class="section-introducao">
             <div class="container">
                 <h1>
-                    PRODUTOS
+                    Produtos
                 </h1>
                 <p class="p-citacao-introducao">
                     "Não tenha nada em sua casa que você não
@@ -61,72 +63,29 @@
                 </p>
             </div>
         </section>
+
         <!-- section introdução -->
 
         <!-- section 1 -->
         <section class="section-textos">
             <div class="container">
-                <div class="div-texto-1 box-5">
-                    <h2>História, Missão e Visão</h2>
-                    <p>
-                        Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos
-                        apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu
-                        um sonho na garagem da nossa casa.
-                    </p>
-                    <p>
-                        Conheça os nossos produtos, pergunte para os nossos clientes e descubra a maravilha de ter uma
-                        Bikcraft na sua casa.
-                    </p>
+                <div class="div-texto-1 box-5 background-1">
+                    <h3>Passeio</h3>
                 </div>
                 <div class="div-texto-2 box-5">
-                    <h2>Valores</h2>
-                    <ul>
-                        <li>– Qualidade no processo com</li>
-                        <li>– Foco no cliente sem perder a</li>
-                        <li>– Diversão, preservando a</li>
-                        <li>– Natureza com sustentabilidade</li>
-                    </ul>
+                    <h3>Passeio</h3>
                 </div>
             </div>
             <div class="container">
-                <img src="img/passeio-3.png" alt="bicicletas-de-passeio">
+                <div class="div-texto-1 box-5 background-2">
+                    <h3>Passeio</h3>
+                </div>
+                <div class="div-texto-2 box-5">
+                    <h3>Passeio</h3>
+                </div>
             </div>
         </section>
         <!-- section 1 -->
-
-        <!-- section qualidade -->
-        <section class="section-qualidade">
-            <div class="container">
-                <h2>
-                    QUALIDADE
-                </h2>
-                <div class="logo">
-                    <img src="img/bikcraft-qualidade.svg" alt="logo">
-                </div>
-                <div class="container-2-divs-com-bordas">
-                    <div class="div-borda-esquerda div-com-borda"></div>
-                    <div class="div-borda-direita div-com-borda"></div>
-                </div>
-                <div class="container-box">
-                    <div class="qualidade-1 qualidades">
-                        <h2>Durabilidade</h2>
-                        <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.
-                        </p>
-                    </div>
-                    <div class="qualidade-2 qualidades">
-                        <h2>Design</h2>
-                        <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu
-                            corpo.</p>
-                    </div>
-                    <div class="qualidade-3 qualidades">
-                        <h2>Sustentabilidade</h2>
-                        <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é
-                            sustentável.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- section qualidade -->
 
         <!-- section formulário -->
         <section class="section-formulario">
