alterações de texto
go

--- a/contato.html
+++ b/contato.html
@@ -116,32 +116,11 @@
 
         <section class="section-map">
             <div class="container">
-                <div class="map-container">
-
-                </div>
+                <img src="img/mapa.png" alt="mapa">
             </div>
         </section>
 
         <!-- section map -->
-
-        <!-- section citação -->
-
-        <section class="section-citacao">
-            <div class="container">
-                <blockquote>
-                    <p>
-                        “O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da
-                        vida
-                        cotidiana.”
-                    </p>
-                    <cite>
-                        WILLIAM MORRIS
-                    </cite>
-                </blockquote>
-            </div>
-        </section>
-
-        <!-- section citação -->
     </main>
 
     <!-- footer -->
