--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,10 @@
             <div class="container">
                 <div class="div-textos">
                     <blockquote>
-                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem
-                            ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
-                        <cite>- Escritor</cite>
+                        <p>"No mundo atual, a continua expansão de nossa
+                            atividade cumpre um papel essencial na formulação da
+                            gestão inovadora da qual fazemos parte." </p>
+                        <cite>Barbara Moss</cite>
                     </blockquote>
                 </div>
             </div>
