página de produtos estilizada
faltando ajustar a versão desk

--- a/produtos.html
+++ b/produtos.html
@@ -69,19 +69,25 @@
         <!-- section 1 -->
         <section class="section-textos">
             <div class="container">
-                <div class="div-texto-1 box-5 background-1">
+                <div class="div-titulo box-5 background-1">
                     <h3>Passeio</h3>
                 </div>
                 <div class="div-texto-2 box-5">
-                    <h3>Passeio</h3>
+                    <img src="img/passeio.png" alt="passeio">
                 </div>
-            </div>
-            <div class="container">
                 <div class="div-texto-1 box-5 background-2">
-                    <h3>Passeio</h3>
                 </div>
                 <div class="div-texto-2 box-5">
-                    <h3>Passeio</h3>
+                    <div class="container-texto">
+                        <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da
+                            vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
+                        <ul>
+                            <li>Conforto</li>
+                            <li>Velocidade</li>
+                            <li>Design</li>
+                            <li>Versatilidade</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -205,7 +211,7 @@
     </footer>
     <!-- footer -->
     <!-- JavaScript-->
-    <script src="js/style.js">
+    <script src="produtos/script.js">
     </script>
     <!-- JavaScript-->
 </body>
